--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ConsoleColors",
+  "name": "consolecolors",
   "version": "0.0.1",
   "description": "Console Colors it's a very small script (30 lines) that adds colors to the node console.log extending the string prototype.",
   "main": "consolecolors.js",
