SD- #time 1m #coment quick version pump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "consolecolors",
   "version": "0.33.2b",
-  "description": "Console Colors it's a very small script (30 lines) that adds colors to the node console.log extending the string prototype.",
+  "description": "Console Colors it's a very small script that adds colors to the node console.log extending the string prototype.",
   "main": "bin/consolecolors.js",
   "scripts": {
     "test": "node test/consolecolors.js"
